# vel3d-examples

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
data/: config.ini  config.ini.example
data/meshes/: cube.fbx  cube_1024_uv.fbx  cube_512_uv.fbx  low_poly_animated.fbx  multi_texture_cube2.fbx  plane_16x9.fbx  plane_16x9_inverted_uv_v_value.fbx  small_test_scene.fbx
data/shaders/: composite.frag  composite.vert  debug.frag  debug.vert  post.frag  post.vert  screen.frag  screen.vert  uber.frag  uber.vert
data/shaders/defaults/: default.frag  default.vert  defaultGI.frag  defaultInvertUV.frag  default_skinned.vert  screen.frag  text.frag
src/examples/: CMakeLists.txt
src/examples/src/: E1.cpp  E1.h  E2.cpp  E2.h  ExampleBrowser.cpp  ExampleBrowser.h  FlyCam.cpp  FlyCam.h  InputState.h  InputStateGenerator.cpp  InputStateGenerator.h  Main.cpp
